k8s/command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: angajasinghe/commandservice:latest
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
              protocol: TCP

---


apiVersion: v1
kind : Service
metadata:
  name: command-clusterip-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
