k8s/platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: angajasinghe/platformservice:latest
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: platform-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
